--- a/wdlconfig.qmd
+++ b/wdlconfig.qmd
@@ -10,7 +10,7 @@ This WILDS WDL configuration guide was inspired by the [BioWDL](https://biowdl.g
     2. If the workflow seems useful, the researcher clones the repository locally, makes minimal updates to the input json, and executes the code with minimal effort using their favorite WDL executor.
     3. If the researcher would like to add their own flavor to the workflow, they can fork the repository, customize it as necessary to fit their exact research needs, and even resubmit the changes back to the original repository for consideration and review.
 - To that end, WILDS WDL repositories are relatively minimal and will usually consist of:
-    - a detailed [README](https://github.com/getwilds/fastq-to-cram/blob/guidelines-tf/README.md) describing the intended functionality and input/output file types
+    - a detailed [README](https://github.com/getwilds/fastq-to-cram/blob/main/README.md) describing the intended functionality and input/output file types
     - a single [WDL script](https://github.com/getwilds/fastq-to-cram/blob/guidelines-tf/fastq-to-cram.wdl) containing the workflow as well as the tasks that make up the workflow
     - a [input json](https://github.com/getwilds/fastq-to-cram/blob/guidelines-tf/fastq-to-cram-inputs.json) template providing examples of expected inputs
     - a [test case](https://github.com/getwilds/fastq-to-cram/tree/guidelines-tf/tests/data) to ensure the workflow is running as expected
@@ -24,7 +24,7 @@ This WILDS WDL configuration guide was inspired by the [BioWDL](https://biowdl.g
 - [Docker containers](https://hutchdatascience.org/WDL_Workflows_Guide/the-first-task.html#docker-images-and-containers) should be assigned to every task to ensure uniform execution, regardless of local context.
     - Outside of very basic images from very trusted sources, Docker images should be pulled directly from [WILDS' Docker Library](https://github.com/getwilds/wilds-docker-library) whenever possible.
     - If you think a particular tool should be added to that library, [submit an issue](https://github.com/getwilds/wilds-docker-library/issues) or email us at wilds@fredhutch.org.
-- In general, [runtime attributes](https://hutchdatascience.org/WDL_Workflows_Guide/the-first-task.html#runtime-attributes) should be defined whenever possible in order to enable execution on as many backends as possible.
+- In general, [runtime attributes](https://hutchdatascience.org/WDL_Workflows_Guide/the-first-task.html#runtime-attributes) should be defined whenever possible in order to enable execution on as many [backends](https://hutchdatascience.org/WDL_Workflows_Guide/appendix-backends-and-executors.html) as possible.
 
 ## Stylistic Guidelines
 
@@ -44,10 +44,14 @@ This WILDS WDL configuration guide was inspired by the [BioWDL](https://biowdl.g
 - **Descriptive Commenting**:
     - [Comments](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/fastq-to-cram.wdl#L82C1-L82C41) should be placed above each task in the workflow describing its function.
     - Input descriptors should be provided in the [`parameter_meta`](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/fastq-to-cram.wdl#L71C3-L77C4) component.
+- **Command Syntax**:
+    - Command sections within a WDL task should use [Heredoc syntax](https://hutchdatascience.org/WDL_Workflows_Guide/the-first-task.html#referencing-inputs-in-the-command-section) for added clarity in terms of input variables.
+    - Quotation marks around string/file variables are recommended within the command section to avoid confusion involving spaces.
+    - While it is usually not an issue within the context of Cromwell, [file localization](https://hutchdatascience.org/WDL_Workflows_Guide/the-first-task.html#file-localization) is also recommended in order to maximize the utility of the workflow across different WDL executors.
 
 ## Repository Guidelines
 
-- As with all repositories, each workflow should include a detailed [README](https://github.com/getwilds/fastq-to-cram/tree/guidelines-tf?tab=readme-ov-file#fastq-to-cram) containing:
+- As with all repositories, each workflow should include a detailed [README](https://github.com/getwilds/fastq-to-cram/blob/main/README.md) containing:
     - Purpose and functionality of the workflow
     - Basic diagram illustrating the flow of data
     - Contact information in case issues pop up 
