--- a/wdlconfig.qmd
+++ b/wdlconfig.qmd
@@ -10,10 +10,10 @@ This WILDS WDL configuration guide was inspired by the [BioWDL](https://biowdl.g
     2. If the workflow seems useful, the researcher clones the repository locally, makes minimal updates to the input json, and executes the code with minimal effort using their favorite WDL executor.
     3. If the researcher would like to add their own flavor to the workflow, they can fork the repository, customize it as necessary to fit their exact research needs, and even resubmit the changes back to the original repository for consideration and review.
 - To that end, WILDS WDL repositories are relatively minimal and will usually consist of:
-    - a detailed [README](https://github.com/getwilds/fastq-to-cram/blob/main/README.md) describing the intended functionality and input/output file types
-    - a single [WDL script](https://github.com/getwilds/fastq-to-cram/blob/guidelines-tf/fastq-to-cram.wdl) containing the workflow as well as the tasks that make up the workflow
-    - a [input json](https://github.com/getwilds/fastq-to-cram/blob/guidelines-tf/fastq-to-cram-inputs.json) template providing examples of expected inputs
-    - a [test case](https://github.com/getwilds/fastq-to-cram/tree/guidelines-tf/tests/data) to ensure the workflow is running as expected
+    - a detailed [README](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/README.md) describing the intended functionality and input/output file types
+    - a single [WDL script](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/fastq-to-cram.wdl) containing the workflow as well as the tasks that make up the workflow
+    - a [input json](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/fastq-to-cram-inputs.json) template providing examples of expected inputs
+    - a [test case](https://github.com/getwilds/fastq-to-cram/tree/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/tests/data) to ensure the workflow is running as expected
 - We believe the minimal nature of this setup will aid from a readability/ease-of-use standpoint.
 
 ## Structural Guidelines
@@ -51,15 +51,15 @@ This WILDS WDL configuration guide was inspired by the [BioWDL](https://biowdl.g
 
 ## Repository Guidelines
 
-- As with all repositories, each workflow should include a detailed [README](https://github.com/getwilds/fastq-to-cram/blob/main/README.md) containing:
+- As with all repositories, each workflow should include a detailed [README](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/README.md) containing:
     - Purpose and functionality of the workflow
     - Basic diagram illustrating the flow of data
     - Contact information in case issues pop up 
     - [WILDS Badge](https://github.com/getwilds/badges) at the top describing the development status of the workflow
 - Make sure to include an example input json in the repository for users to modify and easily execute the workflow.
     - For a skeleton template, try the `inputs` action of [WOMtool](https://cromwell.readthedocs.io/en/stable/WOMtool/#inputs).
-- A GitHub Action executing [WOMtool](https://cromwell.readthedocs.io/en/stable/WOMtool/#validate) `validate` is highly recommended as a [check](https://github.com/getwilds/fastq-to-cram/blob/guidelines-tf/.github/workflows/womtools-validate.yml) before merging new features into main.
-    - If you're feeling adventurous, try automating an [entire test run](https://github.com/getwilds/fastq-to-cram/blob/guidelines-tf/.github/workflows/cromwell-test-run.yml) using a very small [validation dataset](https://github.com/getwilds/fastq-to-cram/tree/guidelines-tf/tests/data).
+- A GitHub Action executing [WOMtool](https://cromwell.readthedocs.io/en/stable/WOMtool/#validate) `validate` is highly recommended as a [check](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/.github/workflows/womtools-validate.yml) before merging new features into the main branch.
+    - If you're feeling adventurous, try automating an [entire test run](https://github.com/getwilds/fastq-to-cram/blob/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/.github/workflows/cromwell-test-run.yml) using a very small [validation dataset](https://github.com/getwilds/fastq-to-cram/tree/489ccdf0697ab902ca6f775b8e51d4f0603c0c01/tests/data).
 
 ## Additional Resources
 
