--- a/contributing.qmd
+++ b/contributing.qmd
@@ -1,6 +1,6 @@
 # Contributing {{< iconify fa6-solid hammer >}} {#sec-contributing}
 
-This chapter is intended to direct you to the place you want to be, whether you want to get help, use software, contribute to software, and more. Reminder: the scope of this guide is software maintained by DaSL in the [WILDS GitHub organization][ghwilds]. "Contributors" as used in this book includes DaSL staff as we are also contributors! If you'd like help with your own software schedule a [house call](https://calendly.com/data-house-calls).
+This chapter is intended to direct you to the place you want to be, whether you want to get help, use software, contribute to software, and more. Reminder: the scope of this guide is software maintained by DaSL in the [WILDS GitHub organization][ghwilds]. "Contributors" as used in this book includes DaSL staff as we are also contributors! If you'd like help with your own software, schedule a [Data House Call](https://calendly.com/data-house-calls).
 
 ## Communication Channels
 
@@ -14,7 +14,7 @@ This book concerns any software created in the GitHub repositories under the [WI
 
 Find the thing you would like to do below and follow its instructions.
 
-**Question**: If you have a question you can ask in the Slack linked above, or open an issue in any of the GitHub repositories.
+**Question**: If you have a question, you can ask in the Slack linked above, or open an issue in any of the GitHub repositories.
 
 **Bug**: If you want to report a bug, open an issue in the appropriate GitHub repository.
 
