--- a/style.qmd
+++ b/style.qmd
@@ -46,7 +46,7 @@ And then run:
 lintr::use_lintr()
 ```
 
-To create a configuration file for `lintr`. In the file created (`.lintr`) you can set custom congifuration as needed for your package (see the [lintr vignette](https://lintr.r-lib.org/articles/lintr.html)).
+To create a configuration file for `lintr`. In the file created (`.lintr`), you can set a custom configuration as needed for your package (see the [lintr vignette](https://lintr.r-lib.org/articles/lintr.html)).
 
 Next, run:
 
@@ -92,8 +92,8 @@ There's a few different options for `Ruff` for GitHub Actions. See [Ruff docs](h
 Some free resources for writing better code:
 
 - [Tidy design principles](https://design.tidyverse.org/) by Hadley Wickham
-- [Software Engineering at Google](https://abseil.io/resources/swe-book) curated by Titus Winters, Tom Manshreck and Hyrum Wright
-
+- [The Programmatic Programmer](https://pragprog.com/titles/tpp20/the-pragmatic-programmer-20th-anniversary-edition/) by David Thomas, Andrew Hunt
+- [Software Engineering at Google](https://abseil.io/resources/swe-book) curated by Titus Winters, Tom Manshreck and Hyrum Wright.
 
 [tidystyle]: https://style.tidyverse.org/
 [styler]: https://styler.r-lib.org/
