--- a/conventions.qmd
+++ b/conventions.qmd
@@ -44,7 +44,25 @@ WILDS projects will use badges to indicate their status. Badges are a widely use
 
 WILDS badges are maintained in a GitHub repository at <https://github.com/getwilds/badges>. There's a website for these badges and an easy click to copy interface at <https://getwilds.org/badges/>.
 
-An example badge: [![](https://getwilds.org/badges/badges/stable.svg)](https://getwilds.org/badges/#stable)
+Each status has a set of corresponding practices with respect to the following (which you can find throughout this book):
+
+- Versioning
+- Branching
+- Code Review
+- Testing
+- Documentation
+- Releases
+
+<!-- An example badge: [![](https://getwilds.org/badges/badges/stable.svg)](https://getwilds.org/badges/#stable) -->
+
+#### Statuses
+
+- **Concept** [![](https://getwilds.org/badges/badges/concept.svg)](https://getwilds.org/badges/#concept) Not useable, no support, not open to feedback, unstable API.
+- **Experimental** [![](https://getwilds.org/badges/badges/experimental.svg)](https://getwilds.org/badges/#experimental) Useable, some support, not open to feedback, unstable API.
+- **Prototype** [![](https://getwilds.org/badges/badges/prototype.svg)](https://getwilds.org/badges/#prototype) Useable, some support, open to feedback, unstable API.
+- **Stable** [![](https://getwilds.org/badges/badges/stable.svg)](https://getwilds.org/badges/#stable) Useable, full support, open to feedback, stable API.
+- **Deprecated** [![](https://getwilds.org/badges/badges/deprecated.svg)](https://getwilds.org/badges/#deprecated) Useable as of a fixed, past date, no support, not open to feedback, stable API as of a fixed, past date.
+
 
 ### Contributing instructions
 
