--- a/conventions.qmd
+++ b/conventions.qmd
@@ -6,21 +6,55 @@
 
 The following are examples for R and Python:
 
-- R:
-  - With the `usethis` package you can add an entry of type `person` to the DESCRIPTION file of your package
+### R
 
-  ```r
-  usethis::use_author("Fred Hutchinson Cancer Center", role = "fnd", email = "wilds@fredhutch.org")
-  ```
-- Python:
-  - Add a dict in the authors block of the pyproject.toml file or other config file in your package
+Use the `usethis` package to add an entry of type `person` to the DESCRIPTION file of your package
 
-  ```python3
-  {
-    name = "Fred Hutchinson Cancer Center"",
-    email = "wilds@fredhutch.org"
-  }
-  ```
+```r
+# install.packages("pak")
+pak::pak("usethis")
+usethis::use_author("Fred Hutchinson Cancer Center", role = "fnd", email = "wilds@fredhutch.org")
+```
+
+And use the `desc` package to add a Research Organization (ROR) identifier for Fred Hutch
+
+```r
+# `desc` version 1.4.3.9000 or greater for function `desc_add_ror`
+pak::pak("r-lib/desc")
+desc::desc_add_ror(ror = "007ps6h72", given = "Fred Hutchinson Cancer Center")
+```
+
+Which should give you in your `DESCRIPTION` file:
+
+
+> person("Fred Hutchinson Cancer Center", , , "wilds@fredhutch.org",
+    role = "fnd", comment = c(ROR = "007ps6h72"))
+
+
+### Python
+
+Add a dict in the authors block of the pyproject.toml file in your package:
+
+```toml
+authors = [
+    {
+        name = "Fred Hutchinson Cancer Center",
+        email = "wilds@fredhutch.org"
+    }
+]
+```
+
+Then add the ROR identifier as:
+
+```toml
+[tool.package-name.metadata]
+authors = [
+    {
+        name = "Fred Hutchinson Cancer Center",
+        ror = "007ps6h72"
+    }
+]
+```
 
 For other types of WILDS repositories, perhaps just add a mention to the README.
 
